2008-09-08  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/tracker-indexer/tracker-indexer-db.c:
	* src/trackerd/tracker-db.c:
	* src/libtracker-common/tracker-type-utils.c:
	* src/libtracker-common/tracker-type-utils.h: Fixed problems with
	date handling in metadata.


2008-09-08  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Implemented a cache that
	we use to know if a directory mtime has changed to know if we
	should go into it to be reindexed. We still mtime check each file
	in that directory, but we don't even try to index files for a
	directory where the mtime is the same.
	
	* src/tracker-indexer/tracker-module.h: Cleaned up header.

2008-09-05  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* src/Makefile.am: Make Jamie's new tracker-fts/ directory disabled
	by default. Enabled with the --enable-sqlite-fts configure option.
	This breaks the build right now that's why it is disabled while it
	is under development. Also fixed make distcheck failures (tests
	still fail for some things).
	
	* src/libtracker-db/Makefile.am: Link with -lz so build doesn't fail.

	* tests/Makefile.am: Clean ups.

	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_flush):
	Fixed build warnings.

	* tests/tracker-fts/Makefile.am: Fixed missing header file.

2008-09-05  Martyn Russell  <martyn@imendio.com>

	* src/libstemmer/*: Moved all source files into this directory,
	there is no need to have them all in separate directories. Make
	the library generated a shared library.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-db/Makefile.am: Made libtracker-common and
	libtracker-db shared libraries.

	* src/libtracker-common/tracker-language.c: Fixed include paths.

2008-09-05  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/libtracker/tracker.h:
	* src/libtracker/tracker.c:
	* src/tracker-utils/tracker-unique.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-metadata.h: